Various polish fixes:
 - Loading state for graph
 - Added fake latency cookie value to test loading
 - If metrics provider has no series/stats for the service show something that doesn't look broken
 - Graph hover works right to the edge now
 - Stats boxes now wrap so they are either shown or not as will fit not cut off
 - Graph resizes when browser window size changes
 - Some tweaks to number formats and stat metrics to make them more compact/useful

--- a/ui-v2/app/components/topology-metrics/stats/index.scss
+++ b/ui-v2/app/components/topology-metrics/stats/index.scss
@@ -1,13 +1,15 @@
 .stats {
   padding: 12px;
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
   justify-content: space-between;
   align-items: stretch;
   width: 100%;
   overflow: hidden;
+  height: 46px;
   dl {
     display:flex;
+    margin-bottom: 50px; // pushes wrapped metrics well out of the bounding box to hide them.
   }
   dt {
     margin-right: 5px;
@@ -15,13 +17,12 @@
   }
   dd {
     color: $gray-400 !important;
-    margin-right: 10px;
   }
   span {
     margin: 0 auto !important;
     color: $gray-500;
   }
-  span::after {
+  span.loader::after {
     @extend %with-loading-icon, %as-pseudo;
   }
 }
